<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:scaleType="fitXY"
        android:paddingLeft="8dp" android:paddingRight="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:textSize="25sp"
            android:textColor="#004D40"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_home"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textColor="#757575"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_title"
            android:paddingTop="12dp"
            android:textSize="20sp"
            android:textColor="#757575"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_detail"
            android:paddingTop="12dp"
            android:textSize="18sp"
            android:textColor="#757575"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know_more"
            android:paddingTop="12dp"
            android:textSize="18sp"
            android:textColor="#757575"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:id="@+id/visitWebsite1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#9C27B0"
            android:id="@+id/visitWebsite2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:background="@color/ColorPrimary"
            android:id="@+id/respondButton">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="30sp"
                android:text="@string/respond_home"/>
         </RelativeLayout>
        <WebView
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/wv"></WebView>

</RelativeLayout>