<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
    android:paddingRight="8dp" android:paddingLeft="8dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_Net_neutrality"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:textColor="#004D40"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:textColor="#757575"
        android:text="@string/what_explain"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:id="@+id/visitWebsite1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#9C27B0"
            android:id="@+id/visitWebsite2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>

</LinearLayout>