<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp" android:paddingLeft="8dp" android:paddingRight="8dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_can"
            android:textSize="25sp"
            android:textColor="#004D40" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:id="@+id/contact_mp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_mp"
                    android:paddingTop="10dp"
                    android:textSize="23sp"
                    android:textColor="#757575"
                    android:id="@+id/tv0"
                    android:paddingBottom="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#757575"
                    android:layout_below="@+id/tv0"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:id="@+id/ask_people">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_people"
                    android:textSize="23sp"
                    android:textColor="#757575"
                    android:id="@+id/tv1"
                    android:paddingBottom="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#757575"
                    android:layout_below="@+id/tv1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:id="@+id/know_startup">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/know_startup"
                    android:textSize="23sp"
                    android:textColor="#757575"
                    android:id="@+id/tv2"
                    android:paddingBottom="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#757575"
                    android:layout_below="@+id/tv2"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:id="@+id/learn_more">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more"
                    android:textSize="23sp"
                    android:textColor="#757575"
                    android:id="@+id/tv3"
                    android:paddingBottom="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#757575"
                    android:layout_below="@+id/tv3"/>
            </RelativeLayout>
        </LinearLayout>
        </ScrollView>


</LinearLayout>